--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "html-sass-babel-boilerplate",
-	"version": "1.0.1",
-	"description": "Simple boilerplate for building your web app with node-sass and babel-cli.",
+	"version": "1.0.2",
+	"description": "Simple boilerplate for building web app with babel-cli and node-sass.",
 	"main": "",
 	"scripts": {
 		"build": "npm run build:css && npm run build:js",
-		"build:css": "node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed",
-		"watch:css": "node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed --watch",
 		"build:js": "babel src/js/main.js --out-file dist/js/main.min.js --presets=env,minify",
-		"watch:js": "babel src/js/main.js --out-file dist/js/main.min.js --presets=env,minify --watch"
+		"watch:js": "babel src/js/main.js --out-file dist/js/main.min.js --presets=env,minify --watch",
+		"build:css": "node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed",
+		"watch:css": "node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed --watch"
 	},
 	"repository": {
 		"type": "git",
