Updated npm scripts and dependencies

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "html-sass-babel-boilerplate",
-	"version": "1.0.3",
+	"version": "1.0.4",
 	"description": "Simple boilerplate for building web app with babel-cli and node-sass.",
 	"main": "",
 	"scripts": {
 		"build": "npm run build:css && npm run build:js",
-		"build:js": "babel src/js/main.js --out-file dist/js/main.min.js --presets=env,minify,stage-2",
-		"watch:js": "babel src/js/main.js --out-file dist/js/main.min.js --presets=env,minify,stage-2 --watch",
-		"build:css": "node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed",
-		"watch:css": "node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed --watch"
+		"build:js": "npx babel src/js/main.js --out-file dist/js/main.min.js --no-comments --presets=minify,stage-2,env",
+		"watch:js": "npx babel src/js/main.js --out-file dist/js/main.min.js --no-comments --presets=minify,stage-2,env --watch",
+		"build:css": "npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed",
+		"watch:css": "npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed --watch"
 	},
 	"repository": {
 		"type": "git",
@@ -34,8 +34,8 @@
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
-		"babel-preset-minify": "^0.4.3",
+		"babel-preset-minify": "^0.5.0",
 		"babel-preset-stage-2": "^6.24.1",
-		"node-sass": "^4.9.0"
+		"node-sass": "^4.9.3"
 	}
 }
