--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
 	"main": "",
 	"scripts": {
 		"build": "npm run build:css && npm run build:js",
-		"build:js": "npx babel src/js/main.js --out-file dist/js/main.min.js --no-comments --minified --presets=@babel/preset-env",
+		"build:js": "npm run lint:js && npx babel src/js/main.js --out-file dist/js/main.min.js --no-comments --minified --presets=@babel/preset-env",
 		"watch:js": "npx babel src/js/main.js --out-file dist/js/main.min.js --no-comments --minified --presets=@babel/preset-env --watch",
 		"build:css": "npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed",
-		"watch:css": "npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed --watch"
+		"watch:css": "npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed --watch",
+		"lint:js": "npx eslint src/js/main.js",
+		"lint:js:fix": "npx eslint src/js/main.js --fix"
 	},
 	"repository": {
 		"type": "git",
@@ -35,6 +37,7 @@
 		"@babel/cli": "^7.2.3",
 		"@babel/core": "^7.3.4",
 		"@babel/preset-env": "^7.3.4",
+		"eslint": "^5.15.0",
 		"node-sass": "^4.9.3"
 	}
 }
