--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"main": "",
 	"scripts": {
 		"build": "npm run build:css && npm run build:js",
-		"build:js": "npm run lint:js && npx babel src/js/main.js --out-file dist/js/main.min.js --no-comments --minified --presets=@babel/preset-env",
+		"build:js": "npx rimraf dist/js/*.js && npm run lint:js && npx babel src/js/main.js --out-file dist/js/main.min.js --no-comments --minified --presets=@babel/preset-env",
 		"watch:js": "npx babel src/js/main.js --out-file dist/js/main.min.js --no-comments --minified --presets=@babel/preset-env --watch",
-		"build:css": "npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed && npx postcss dist/css/main.min.css --use autoprefixer --no-map --output dist/css/main.min.css",
+		"build:css": "npx rimraf dist/css/*.css && npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed && npx postcss dist/css/main.min.css --use autoprefixer --no-map --output dist/css/main.min.css",
 		"watch:css": "npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed --watch",
 		"lint:js": "npx eslint src/js/main.js",
 		"lint:js:fix": "npx eslint src/js/main.js --fix"
@@ -40,6 +40,7 @@
 		"autoprefixer": "^9.4.9",
 		"eslint": "^5.15.0",
 		"node-sass": "^4.11.0",
-		"postcss-cli": "^6.1.2"
+		"postcss-cli": "^6.1.2",
+		"rimraf": "^2.6.3"
 	}
 }
