Updated keywords in package.json

--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
 		"html",
 		"sass",
 		"node-sass",
+		"postcss",
+		"autoprefixer",
 		"babel",
-		"babel-cli",
-		"babel-preset-env",
-		"babel-preset-minify",
+		"babel7",
+		"eslint",
 		"boilerplate",
 		"html-sass-babel-boilerplate"
 	],
