--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "",
 	"scripts": {
 		"build": "npm run build:css && npm run build:js",
-		"build:css": "npx rimraf dist/css/*.css && npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed && npx postcss dist/css/main.min.css --output dist/css/main.min.css --use autoprefixer --no-map",
+		"build:css": "npx rimraf dist/css/*.css && npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed && npx postcss dist/css/main.min.css --output dist/css/main.min.css --use autoprefixer @fullhuman/postcss-purgecss --no-map",
 		"watch:css": "npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed --watch",
 		"build:js": "npx rimraf dist/js/*.js && npm run lint:js && npx babel src/js/main.js --out-file dist/js/main.min.js --no-comments --minified --presets=@babel/preset-env",
 		"watch:js": "npx babel src/js/main.js --out-file dist/js/main.min.js --no-comments --minified --presets=@babel/preset-env --watch",
@@ -22,6 +22,7 @@
 		"node-sass",
 		"postcss",
 		"autoprefixer",
+		"purgecss",
 		"babel",
 		"babel7",
 		"eslint",
@@ -38,6 +39,7 @@
 		"@babel/cli": "^7.2.3",
 		"@babel/core": "^7.3.4",
 		"@babel/preset-env": "^7.3.4",
+		"@fullhuman/postcss-purgecss": "^1.3.0",
 		"autoprefixer": "^9.4.10",
 		"eslint": "^5.15.1",
 		"node-sass": "^4.11.0",
