--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "",
 	"scripts": {
 		"build": "npm run build:css && npm run build:js",
-		"build:css": "npx rimraf dist/css/*.css && npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed && npx postcss dist/css/main.min.css --output dist/css/main.min.css --use autoprefixer @fullhuman/postcss-purgecss --no-map",
+		"build:css": "npx rimraf dist/css/*.css && npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed && npx postcss dist/css/main.min.css --output dist/css/main.min.css --no-map",
 		"watch:css": "npx node-sass src/scss/main.scss dist/css/main.min.css --output-style=compressed --watch",
 		"build:js": "npx rimraf dist/js/*.js && npm run lint:js && npx babel src/js/main.js --out-file dist/js/main.min.js --no-comments --minified --presets=@babel/preset-env",
 		"watch:js": "npx babel src/js/main.js --out-file dist/js/main.min.js --no-comments --minified --presets=@babel/preset-env --watch",
@@ -36,14 +36,14 @@
 	},
 	"homepage": "https://github.com/oliverfindl/html-sass-babel-boilerplate#readme",
 	"devDependencies": {
-		"@babel/cli": "^7.7.4",
-		"@babel/core": "^7.7.4",
-		"@babel/preset-env": "^7.7.4",
-		"@fullhuman/postcss-purgecss": "^1.3.0",
-		"autoprefixer": "^9.7.2",
-		"eslint": "^6.7.1",
-		"node-sass": "^4.13.0",
-		"postcss-cli": "^6.1.3",
-		"rimraf": "^3.0.0"
+		"@babel/cli": "^7.8.4",
+		"@babel/core": "^7.8.6",
+		"@babel/preset-env": "^7.8.6",
+		"@fullhuman/postcss-purgecss": "^2.1.0",
+		"autoprefixer": "^9.7.4",
+		"eslint": "^6.8.0",
+		"node-sass": "^4.13.1",
+		"postcss-cli": "^7.1.0",
+		"rimraf": "^3.0.2"
 	}
 }
