--- a/package.json
+++ b/package.json
@@ -37,15 +37,16 @@
 	},
 	"homepage": "https://github.com/oliverfindl/html-sass-babel-boilerplate#readme",
 	"devDependencies": {
-		"@babel/cli": "^7.8.4",
-		"@babel/core": "^7.8.7",
-		"@babel/preset-env": "^7.8.7",
-		"@fullhuman/postcss-purgecss": "^2.1.0",
-		"autoprefixer": "^9.7.4",
-		"eslint": "^6.8.0",
-		"node-sass": "^4.13.1",
-		"postcss-cli": "^7.1.0",
+		"@babel/cli": "^7.12.1",
+		"@babel/core": "^7.12.3",
+		"@babel/preset-env": "^7.12.1",
+		"@fullhuman/postcss-purgecss": "^3.0.0",
+		"autoprefixer": "^10.0.2",
+		"eslint": "^7.13.0",
+		"node-sass": "^5.0.0",
+		"postcss": "^8.1.7",
+		"postcss-cli": "^8.2.0",
 		"rimraf": "^3.0.2",
-		"terser": "^4.6.6"
+		"terser": "^5.3.8"
 	}
 }
