Updated keywords in package.json

--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
 	"keywords": [
 		"html",
 		"sass",
-		"node-sass",
 		"postcss",
 		"autoprefixer",
 		"purgecss",
 		"babel",
-		"babel7",
 		"eslint",
+		"stylelint",
 		"boilerplate",
 		"html-sass-babel-boilerplate"
 	],
